--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <title>Your bot name</title>
+    <title>Vynx</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent">
@@ -23,13 +23,10 @@
                 <a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="https://discord.gg/7tQGHRm8D5">Discord</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Subscribtion</a>
+                <a class="nav-link" href="https://vynx-bot.github.io/status">Status</a>
             </li>
         </ul>
         <div class="nav-item dropdown">
@@ -51,31 +48,31 @@
 </nav>
 <div class="heading">
     <h1 class="display-5 title">It's time to use Bot in your server.</h1>
-    <p class="subtitle">Bot is a multi-purpose bot ready to skill up and boost up your Discord server<br />Also features auto-moderation, administration, music and much more!</p>
+    <p class="subtitle">Vynx is a multi-purpose bot ready to skill up and boost up your Discord server<br />Features moderation and much more!</p>
     <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Get started</a>
     <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Add to server</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
     <div class="title">Features of Bot</div>
-    <div class="subtitle">We provide you the best features in Bot!</div>
+    <div class="subtitle">We provide you the best features in Vynx!</div>
     <div class="cards">
         <div class="card" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">Future #1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+            <h5 class="card-title">24/7 Uptime</h5>
+            <p class="card-text">We aim to keep Vynx online and ready for use 24 hours a day, 7 days a week.</p>
         </div>
     </div>
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Future #2</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+                <h5 class="card-title">Moderation</h5>
+                <p class="card-text">Vynx has powerful moderation commands at your staff members' fingertips.</p>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Future #3</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+                <h5 class="card-title">Ticketing</h5>
+                <p class="card-text">Vynx is also bundled with a powerful ticketing system to make member support so much easier!.</p>
             </div>
         </div>
     </div>
@@ -84,13 +81,13 @@
     <div class="cards">
         <div class="card statistic" style="width: 18rem;">
             <div class="card-body">
-                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">000</h1>
+                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">30</h1>
                 <p style="font-weight: bold !important;font-size: 20px !important;">servers</p>
             </div>
         </div>
         <div class="card statistic" style="width: 18rem;">
             <div class="card-body">
-                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">000</h1>
+                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">400</h1>
                 <p style="font-weight: bold !important;font-size: 20px !important;">users</p>
             </div>
         </div>
@@ -106,17 +103,17 @@
     <div class="start">
         <div class="card">
             <div class="card-body gs-card">
-                <div class="title">Ready to try Bot?</div>
-                <div class="subtitle">Invite Bot and start giving your server cool perks!</div>
+                <div class="title">Ready to try Vynx?</div>
+                <div class="subtitle">Invite Vynx and start giving your server cool perks!</div>
                 <br />
-                <a class="btn btn-primary btn-lg" href="#start_link" role="button">Get started</a>
+                <a class="btn btn-primary btn-lg" href="https://discord.com/api/oauth2/authorize?client_id=908103379379707974&permissions=8&scope=bot" role="button">Get started</a>
             </div><br />
         </div>
     </div>
     <div class="footer">
         <div class="bot-footer">
-            <img src="assets/BotLogoWord.svg" width="150"><br />
-            Copyright © [BotOwner] - 2020
+            <img src="sdfghjkl.png" width="150"><br />
+            Copyright © Vynx - 2021
         </div><br/>
         <div class="nouridio">website designed by <a href="https://nouridio.com"> nouridio</a></div>
     </di
