--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <title>Vynx</title>
+    <script>
+	window.fwSettings={
+	'widget_id':101000001040
+	};
+	!function(){if("function"!=typeof window.FreshworksWidget){var n=function(){n.q.push(arguments)};n.q=[],window.FreshworksWidget=n}}() 
+</script>
+<script type='text/javascript' src='https://euc-widget.freshworks.com/widgets/101000001040.js' async defer></script>
 </head>
 <body>
+    
 <nav class="navbar navbar-expand-lg bg-transparent">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <img src="assets/menuIcon.svg" width="20px" height="20px" style="max-width: none !important;">
