--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <img src="assets/menuIcon.svg" width="20px" height="20px" style="max-width: none !important;">
     </button>
-    <img src="assets/BotLogo.svg" width="50" height="50">
+    <img src="dfghjkl.png" width="50" height="50">
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 20px !important">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -41,8 +41,8 @@
 <div class="heading">
     <h1 class="display-5 title">It's time to use Bot in your server.</h1>
     <p class="subtitle">Vynx is a multi-purpose bot ready to skill up and boost up your Discord server<br />Features moderation and much more!</p>
-    <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Get started</a>
-    <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Add to server</a>
+    <a class="btn btn-primary btn-lg" href="https://discord.com/api/oauth2/authorize?client_id=908103379379707974&permissions=8&scope=bot" target="_blank" role="button">Invite Vynx</a>
+    <a class="btn btn-secondary btn-lg" href="https://discord.gg/7tQGHRm8D5" target="_blank" role="button">Support Server</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
