--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://discord.gg/7tQGHRm8D5">Discord</a>
+                <a class="nav-link" href="https://vynx-bot.freshdesk.com">Support</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://vynx-bot.github.io/status">Status</a>
