--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="https://vynx-bot.freshdesk.com">Support</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://vynx-bot.github.io/status">Status</a>
+                <a class="nav-link" href="https://vynx-bot.github.io/status">Status ![Uptime](https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fvynx-bot%2Fstatus%2Fmaster%2Fapi%2Fmain-bot%2Fuptime.json)</a>
             </li>
         </ul>
 </nav>
