--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                 <a class="nav-link" href="https://vynx-bot.freshdesk.com">Support</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://vynx-bot.github.io/status">Status ![Uptime](https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fvynx-bot%2Fstatus%2Fmaster%2Fapi%2Fmain-bot%2Fuptime.json)</a>
+                <a class="nav-link" href="https://vynx-bot.github.io/status">Status</a>
             </li>
         </ul>
 </nav>
 <div class="heading">
-    <h1 class="display-5 title">It's time to use Bot in your server.</h1>
+    <h1 class="display-5 title">It's time to use Vynx in your server.</h1>
     <p class="subtitle">Vynx is a multi-purpose bot ready to skill up and boost up your Discord server<br />Features moderation and much more!</p>
     <a class="btn btn-primary btn-lg" href="https://discord.com/api/oauth2/authorize?client_id=908103379379707974&permissions=8&scope=bot" target="_blank" role="button">Invite Vynx</a>
     <a class="btn btn-secondary btn-lg" href="https://discord.gg/7tQGHRm8D5" target="_blank" role="button">Support Server</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
-    <div class="title">Features of Bot</div>
+    <div class="title">Features of Vynx</div>
     <div class="subtitle">We provide you the best features in Vynx!</div>
     <div class="cards">
         <div class="card" style="width: 18rem;">
