--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <img src="assets/menuIcon.svg" width="20px" height="20px" style="max-width: none !important;">
     </button>
-    <img src="sdfghjkl.png" width="50" height="50">
+    <img src="https://avatar1.freshworks.com/org/eu/382969460579118075/ORIGINAL.png" width="50" height="50">
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 20px !important">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -104,7 +104,7 @@
     </div>
     <div class="footer">
         <div class="bot-footer">
-            <img src="sdfghjkl.png" width="150"><br />
+            <img src="https://avatar1.freshworks.com/org/eu/382969460579118075/ORIGINAL.png" width="150"><br />
             Copyright © Vynx - 2021
         </div><br/>
         <div class="nouridio">website designed by <a href="https://nouridio.com"> nouridio</a></div>
