--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="https://vynx-bot.freshdesk.com">Support</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://vynx-bot.github.io/status">Status</a>
+                <a class="nav-link" href="https://vynx.instatus.com">Status</a>
             </li>
         </ul>
 </nav>
